<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">金稻商城</string>

    <string name="home">首页</string>
    <string name="recharge">充值</string>
    <string name="classfy">分类</string>
    <string name="cart">购物车</string>
    <string name="cart_empty">购物车什么都没有，赶快去购物吧</string>
    <string name="goto_shop">去购物</string>
    <string name="mine">我的</string>
    <string name="net_not_force_please_try_refresh">网络不给力，刷新一下试试？</string>
    <string name="loading">加载中...</string>
    <string name="refresh">刷新</string>
    <string name="article_detail">文章详情</string>
    <string name="author">作者：</string>
    <string name="notice">公告</string>
    <string name="phone_fee_recharge">话费充值</string>
    <string name="vip_member">VIP会员</string>
    <string name="app_download">APP下载</string>
    <string name="company_introduction">公司介绍</string>
    <string name="custom_center">客服中心</string>
    <string name="hot_commodity">-热销商品-</string>
    <string name="my_daoli_recharge">稻粒充值</string>
    <string name="my_daoli_transfer">稻粒转账</string>
    <string name="my_profile">个人资料</string>
    <string name="my_bill">我的账单</string>
    <string name="my_commission">佣金详情</string>
    <string name="my_contact">我的推荐</string>
    <string name="my_withdraw">我要提现</string>
    <string name="my_withdraw_record">提现记录</string>
    <string name="my_address">收货地址</string>
    <string name="my_promotion">我要推广</string>
    <string name="my_order">我的订单</string>
    <string name="my_logout">退出登录</string>
    <string name="recharge_discount">充值优惠</string>
    <string name="phone_fee_recharge_record">充值记录</string>
    <string name="you_are_not_vip">（你不是VIP会员，立即升级）</string>
    <string name="recharge_50">50元\n\n会员优惠价:%1$d元</string>
    <string name="recharge_100">100元\n\n会员优惠价:%1$d元</string>
    <string name="pay">支付</string>
    <string name="go_to_pay">去支付</string>
    <string name="pay_method">支付方式：</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_wechat">微信</string>
    <string name="recharge_ammount">充值金额：</string>
    <string name="recharge_pay_indeed">实际支付：</string>
    <string name="recharge_immedate">立即充值</string>
    <string name="upgrade_to_vip">升级为VIP</string>
    <string name="custom_phone_num">客服电话：</string>
    <string name="classify_sales_default">默认</string>
    <string name="classify_sales_popularity">人气</string>
    <string name="classify_sales_price">价格</string>
    <string name="classify_sales_ammount">销量</string>
    <string name="classify_commodity">商品</string>
    <!--<string name="phone_num_colon">手机号：</string>-->
    <string name="phone_num">手机号</string>
    <string name="phone_num_input">请输入手机号</string>
    <!--<string name="password_colon">密码：</string>-->
    <string name="password">密码&#160;&#160;&#160;&#160;</string>
    <string name="password_new">新密码</string>
    <string name="password_input">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_free">免费注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="veirfy_code">验证码</string>
    <string name="veirfy_code_user_profile">验证码&#160;&#160;&#160;&#160;</string>
    <string name="get_veirfy_code">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="submit">提交</string>
    <string name="search">搜索</string>
    <string name="input_key_word">请输入你搜索的关键字</string>
    <string name="no_commodity">暂无商品</string>
    <string name="login_register">点击头像登录/注册</string>
    <string name="transferable_amount">可转账金额：</string>
    <string name="transfer_amount">转账金额</string>
    <string name="input_transfer_amount">请输入转账金额</string>
    <string name="transfer_account">转账账户</string>
    <string name="input_transfer_account">请输入转账账户</string>
    <string name="transfer_immediate">立即转账</string>
    <string name="transfer_record">转账记录</string>
    <string name="share_commission">佣金余额：</string>
    <string name="commission_convert_to_balance">转换成余额</string>
    <string name="withdrawable_amount">可提现金额：</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="commission_convert_amount">转换金额</string>
    <string name="daoli_transfer_account">转换金额</string>
    <string name="input_with_amount_hint">请输入整百金额</string>
    <string name="bank_name">银行名称</string>
    <string name="bank_card_num">银行卡号</string>
    <string name="bank_card_owener_name">户主姓名</string>
    <string name="bank_branch_address">支行地址</string>
    <string name="contact_phone_num">联系电话</string>
    <string name="withdraw_immediate">立即提现</string>
    <string name="confirm_commission_convert">确认转换</string>
    <string name="withdraw_hint">温馨提示：可提现金额必须为整百</string>
    <string name="withdraw_hint2">每笔提现手续费5元</string>
    <string name="withdraw_first_way">第一种方式（支付宝）：</string>
    <string name="withdraw_second_way">第二种方式（银行卡）：</string>
    <string name="alipay_account">支付宝账号：</string>
    <string name="commission_convert">佣金转换</string>
    <string name="save_modify">保存修改</string>
    <string name="delivery_name">收货人姓名</string>
    <string name="delivery_phone_num">收货人电话</string>
    <string name="delivery_address">收货人地址</string>
    <string name="please_select_bank">请选择开户银行</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="reset_pwd_success">重置密码成功，请登录</string>
    <string name="reset_pwd_failure">重置密码失败，请重试</string>
    <string name="register_failure">注册失败，请重试</string>
    <string name="register_password_too_short">密码不能少于6位，请重新设置</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败，请重试</string>
    <string name="get_msgcode_success">获取短信验证码成功</string>
    <string name="get_msgcode_failure">获取短信验证码失败</string>
    <string name="get_msgcode_frequent">获取短信验证码太频繁，请稍后再试</string>
    <string name="register_msg_code_invalid">验证码无效</string>
    <string name="vip_recharge_price">VIP会员价  %1$d元</string>
    <string name="vip_recharge_origin_price">原价  %1$d元</string>
    <string name="vip_recharge_price_to_user">（存到余额%1$d元）</string>
    <string name="daoli_balance">稻粒余额</string>
    <string name="daoli">稻粒</string>
    <string name="daoli_recharge_ammount">充值金额</string>
    <string name="user_not_login">你还没有登录,请登录</string>
    <string name="address_save_success">地址保存成功</string>
    <string name="profile_save_success">个人资料保存成功</string>
    <string name="product_detail">商品详情</string>
    <string name="order_detail">订单详情</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="balance">下单</string>
    <string name="product_sold_out">商品已售罄</string>
    <string name="money_symbol">¥</string>
    <string name="vip_contract_title">阅读并同意</string>
    <string name="vip_contract_desc">《金稻商城VIP升级协议》</string>
    <string name="read_agree_contract">请选择 阅读并同意《金稻商城VIP升级协议》</string>
    <string name="custom_service">在线客服</string>
    <string name="help_feedback">反馈与建议</string>
    <string name="email_title">标题</string>
    <string name="email_content">内容</string>
    <string name="email_info_hint">请输入你要发送的邮件信息</string>
    <string name="add_attachment">添加附件</string>


    <string name="vip_member_recharge_instruction">VIP会员权益说明：\n\n
1、VIP会员享受话费充值88折优惠，每月限额200元，限本机号码\n\n
2、VIP会员享受商城购物88折\n\n
3、VIP会员享受全国推广权\n\n
4、VIP会员享受推广会员的VIP充值佣金、购物佣金和话费充值佣金\n\n
</string>

    <string name="daoli_recharge_instruction">稻粒说明：\n\n
    1、非VIP会员使用稻粒购物享受88折优惠\n\n
        2、VIP会员使用稻粒购物享受88折的基础上再打88折，即77折\n\n
        3、稻粒不能提现，但可以转账\n\n
     </string>

    <string name="bank_100">中国邮政储蓄</string>
    <string name="bank_102">工商银行</string>
    <string name="bank_103">农业银行</string>
    <string name="bank_104">中国银行</string>
    <string name="bank_105">建设银行</string>
    <string name="bank_301">交通银行</string>
    <string name="bank_302">中信银行</string>
    <string name="bank_303">光大银行</string>
    <string name="bank_304">华夏银行</string>
    <string name="bank_305">民生银行</string>
    <string name="bank_306">广发银行</string>
    <string name="bank_308">招商银行</string>
    <string name="bank_309">兴业银行</string>
    <string name="bank_310">浦发银行</string>

    <string name="customactivityoncrash_error_activity_error_occurred_explanation">程序出错了，抱歉给您带来不便\n为了尽快解决此问题，您可以点击错误详情，并复制错误代码或截图，发邮件反馈到技术支持邮箱：tuohuangnongke@163.com </string>
    <string name="customactivityoncrash_error_activity_restart_app">重启</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">已复制</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
</resources>
