<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.nongke.jindao.base.view.TitleView
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <LinearLayout style="@style/code_edit_layout_style">

        <TextView
            style="@style/common_txt_16sp"
            android:text="@string/transferable_amount" />

        <TextView
            style="@style/common_txt_16sp"
            android:text="100"
            android:textColor="@color/app_color"
            android:textSize="18sp" />

        <TextView
            style="@style/common_txt_16sp"
            android:text=" 元" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title"
        android:orientation="vertical">

        <LinearLayout style="@style/code_edit_layout_style">

            <TextView
                style="@style/common_txt_16sp"
                android:text="@string/transfer_amount" />

            <EditText
                android:id="@+id/et_transfer_amount"
                style="@style/code_edit_style" />
        </LinearLayout>

        <LinearLayout style="@style/code_edit_layout_style">

            <TextView
                style="@style/common_txt_16sp"
                android:text="@string/transfer_account" />

            <EditText
                android:id="@+id/et_transfer_account"
                style="@style/code_edit_style" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_transfer"
            style="@style/btn_selector_match_style"
            android:text="@string/transfer_immediate" />


        <TextView
            android:id="@+id/tv_transfer_record"
            style="@style/btn_selector_match_style"
            android:text="@string/transfer_record" />
    </LinearLayout>

</LinearLayout>
