<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.nongke.jindao.base.view.TitleView
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ll_withdraw_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout

                style="@style/code_edit_layout_style">

                <TextView
                    style="@style/common_txt_16sp"
                    android:text="@string/bank_name" />

                <LinearLayout
                    android:id="@+id/ll_select_bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/code_edit_bg"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_select_bank"
                        style="@style/common_txt_16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/please_select_bank" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/arrow_down" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/code_edit_layout_style">

                <TextView
                    style="@style/common_txt_16sp"
                    android:text="@string/bank_card_num" />

                <EditText
                    android:id="@+id/et_bank_card_num"
                    style="@style/code_edit_text_style"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout style="@style/code_edit_layout_style">

                <TextView
                    style="@style/common_txt_16sp"
                    android:text="@string/bank_card_owener_name" />

                <EditText
                    android:id="@+id/et_bank_card_owner"
                    style="@style/code_edit_text_style"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout style="@style/code_edit_layout_style">

                <TextView
                    style="@style/common_txt_16sp"
                    android:text="@string/bank_branch_address"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/et_bank_branch_address"
                    style="@style/code_edit_text_style"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout style="@style/code_edit_layout_style">

                <TextView
                    style="@style/common_txt_16sp"
                    android:text="@string/contact_phone_num"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/et_contact_phone_num"
                    style="@style/code_edit_num_style"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/common_txt_16sp"
                    android:text="@string/veirfy_code_user_profile" />

                <EditText
                    android:id="@+id/et_modify_profile_verify_code"
                    style="@style/code_edit_num_style"
                    android:inputType="number"/>

                <com.nongke.jindao.view.CountDownButton
                    android:id="@+id/tv_modify_profile_get_verify_code"
                    style="@style/btn_selector_wrap_style"
                    android:text="@string/get_veirfy_code"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_save_modify"
                style="@style/btn_selector_match_style"
                android:text="@string/save_modify"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>