<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f2f2"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"

            android:src="@drawable/user_default_photo1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/user_account_txt"
                android:layout_marginTop="0dp"
                android:text="156****9705" />

            <TextView
                style="@style/user_account_txt"
                android:text="我的邀请人：186****1435" />

            <!--<TextView-->
                <!--style="@style/user_account_txt"-->
                <!--android:text="余额：0.00元" />-->

            <TextView
                style="@style/user_account_txt"
                android:text="佣金：0.00元" />

            <TextView
                style="@style/user_account_txt"
                android:text="普通会员" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_recharge_layout"
        style="@style/user_info_layout">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_my_bill" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_bill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_commission_layout"
        style="@style/user_info_layout">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_my_commision" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_commission" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_withdraw_layout"
        style="@style/user_info_layout">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_my_withdraw" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_withdraw" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_withdraw_record_layout"
        style="@style/user_info_layout">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_my_withdraw_record" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_withdraw_record" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_location_layout"
        style="@style/user_info_layout">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_my_location" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_address" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_promotion_layout"
        style="@style/user_info_layout">

        <ImageView
            style="@style/user_info_icon"
            android:layout_width="30dp"
            android:src="@drawable/icon_my_promotion" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_promotion" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_order_layout"
        style="@style/user_info_layout">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_my_order" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_order" />
    </LinearLayout>

</LinearLayout>
</ScrollView>