<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/user_info_txt"
        android:layout_marginTop="20dp"
        android:text="@string/pay_method" />

    <LinearLayout
        android:id="@+id/ll_pay_alipay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_pay_alipay"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_pay_select" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/icon_alipay" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/pay_alipay" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pay_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_pay_wechat"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_pay_unselect" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/icon_wechat" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/pay_wechat" />
    </LinearLayout>


</LinearLayout>
